# CoreNeuron

./: .bbp-project.yaml  .buildinfo  .cmake-format.changes.yaml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS.txt  CMakeLists.txt  Dockerfile  LICENSE.txt  README.html  README.md  docs_requirements.html  doxygen.html  genindex.html  index.html  search.html  searchindex.js
apps/: CMakeLists.txt  coreneuron.cpp
coreneuron/: CMakeLists.txt  coreneuron.h  coreneuron.hpp  engine.h.in  kinderiv.py  membrane_definitions.h  nrnconf.h
coreneuron/apps/: coreneuron.cpp  corenrn_parameters.cpp  corenrn_parameters.hpp  main1.cpp
coreneuron/config/: config.cpp.in  config.h  neuron_version.hpp.in  version_macros.hpp
coreneuron/gpu/: nrn_acc_manager.cpp  nrn_acc_manager.h  nrn_acc_manager.hpp
coreneuron/io/: core2nrn_data_return.cpp  core2nrn_data_return.hpp  file_utils.cpp  file_utils.hpp  global_vars.cpp  lfp.cpp  lfp.hpp  mech_report.cpp  mech_report.h  mem_layout_util.cpp  mem_layout_util.hpp  mk_mech.cpp  nrn2core_data_init.cpp  nrn2core_direct.h  nrn_checkpoint.cpp  nrn_checkpoint.hpp  nrn_filehandler.cpp  nrn_filehandler.h  nrn_filehandler.hpp  nrn_setup.cpp  nrn_setup.h  nrn_setup.hpp  nrnoptarg.cpp  nrnreport.cpp  nrnsection_mapping.hpp  output_spikes.cpp  output_spikes.hpp  phase1.cpp  phase1.hpp  phase2.cpp  phase2.hpp  prcellstate.cpp  prcellstate.hpp  report_configuration_parser.cpp  setup_fornetcon.cpp  setup_fornetcon.hpp  user_params.hpp
coreneuron/io/reports/: binary_report_handler.cpp  binary_report_handler.hpp  nrnreport.cpp  nrnreport.hpp  report_configuration_parser.cpp  report_event.cpp  report_event.hpp  report_handler.cpp  report_handler.hpp  sonata_report_handler.cpp  sonata_report_handler.hpp
coreneuron/logging/: coreneuron_logging.h
coreneuron/mech/: mech_mapping.cpp  membfunc.hpp  mod2c_core_thread.h  patternstim.cpp  register_mech.cpp
coreneuron/mech/cfile/: eion.cpp
coreneuron/mech/modfile/: hh.mod
coreneuron/mechanism/: capac.cpp  eion.cpp  eion.hpp  mech_mapping.cpp  mech_mapping.hpp  mechanism.hpp  membfunc.hpp  nrnoc_ml.ispc  patternstim.cpp  register_mech.cpp  register_mech.hpp
coreneuron/mechanism/mech/: dimplic.cpp  enginemech.cpp  mod2c_core_thread.h  mod2c_core_thread.hpp  mod_func.c.pl
coreneuron/mpi/: mpispike.cpp  mpispike.hpp  nrnmpi.cpp  nrnmpi.h  nrnmpi_def_cinc.h  nrnmpidec.cpp  nrnmpidec.h  nrnmpiuse.h
coreneuron/mpi/core/: mpispike.cpp  nrnmpi.cpp  nrnmpi.hpp  nrnmpi_def_cinc.cpp  nrnmpi_def_cinc.h  nrnmpidec.cpp
coreneuron/mpi/lib/: mpispike.cpp  mpispike.hpp  nrnmpi.cpp  nrnmpi.hpp  nrnmpi_impl.h  nrnmpidec.cpp
coreneuron/network/: cvodestb.cpp  have2want.h  multisend.cpp  multisend.hpp  multisend_setup.cpp  netcon.hpp  netcvode.cpp  netcvode.h  netcvode.hpp  netpar.cpp  netpar.hpp  partrans.cpp  partrans.hpp  partrans_setup.cpp  tnode.hpp  tqueue.cpp  tqueue.h  tqueue.hpp  tqueue.ipp
coreneuron/nrniv/: cellorder.cpp  cellorder1.cpp  cn_parameters.cpp  corenrn_parameters.cpp  corenrn_parameters.h  global_vars.cpp  main1.cpp  memory.cpp  memory.h  netcvode.cpp  netcvode.h  nrn_acc_manager.cpp  nrn_filehandler.cpp  nrn_filehandler.h  nrn_setup.cpp  nrn_setup.h  nrniv_decl.h  nrnmutdec.h  nrnoptarg.cpp  output_spikes.cpp  partrans.h  partrans_setup.cpp  patternstim.cpp  profiler_interface.h  tqueue.cpp  tqueue.h
coreneuron/nrnmpi/: nrnmpi.cpp
coreneuron/nrnoc/: capac.cpp  fadvance_core.cpp  fast_imem.cpp  fast_imem.h  finitialize.cpp  md1redef.h  md2redef.h  multicore.c  multicore.cpp  multicore.h  nrnoc_aux.cpp  nrntimeout.cpp  nrnunits_modern.h  register_mech.cpp  treeset_core.cpp
coreneuron/permute/: balance.cpp  cellorder.cpp  cellorder.cu  cellorder.hpp  cellorder1.cpp  cellorder2.cpp  data_layout.cpp  data_layout.hpp  node_permute.cpp  node_permute.h
coreneuron/sim/: fadvance_core.cpp  fast_imem.cpp  fast_imem.hpp  finitialize.cpp  multicore.cpp  multicore.h  multicore.hpp  solve_core.cpp  treeset_core.cpp
coreneuron/sim/scopmath/: crout_thread.cpp  crout_thread.hpp  newton_struct.h  newton_thread.cpp  newton_thread.hpp  sparse_thread.cpp  sparse_thread.hpp  ssimplic_thread.cpp  ssimplic_thread.hpp
coreneuron/utils/: corenrn_parameters.cpp  corenrn_parameters.hpp  file_utils.cpp  ivocvect.cpp  ivocvect.h  ivocvect.hpp  lpt.cpp  lpt.hpp  memory.cpp  memory.h  memory_utils.cpp  memory_utils.h  nrn_assert.h  nrn_stats.cpp  nrn_stats.h  nrnmutdec.hpp  nrnoc_aux.cpp  nrnoc_aux.hpp  nrntimeout.cpp  offload.hpp  string_utils.cpp  string_utils.h  swap_endian.h  units.hpp  utils.cpp  utils.hpp  utils_cuda.h  vrecitem.h  vrecord.cpp
coreneuron/utils/ispc/: globals.cpp
coreneuron/utils/profile/: cuda_profile.cu  cude_profile.cpp  profiler_interface.h
coreneuron/utils/progressbar/: progressbar.c  progressbar.cpp  progressbar.h
coreneuron/utils/randoms/: nrnran123.cpp  nrnran123.cu  nrnran123.h
coreneuron/utils/reports/: nrnreport.cpp  nrnreport.h  report_configuration_parser.cpp
extra/: CMakeLists.txt  corenrnmodl  corenrnmodl_makefile.in  instrumentation.tau  nrnivmodl-core  nrnivmodl-core.in  nrnivmodl_core_makefile.in
mods_building/: CMakeLists.txt  corenrnmodl  corenrnmodl_makefile.in
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  integration_test.sh.in  negative_integration_test.sh.in
tests/integration/reportinglib/: 1.check.in  1.conf.in  1.report  reporting_test.sh.in  test_ref.out
tests/integration/ring/: out.dat.ref  ring_ref_solution.h
tests/integration/ring_gap/: out.dat.ref
tests/jenkins/: Jenkinsfile  _env_setup.sh  envutils.sh  install.sh  install_coreneuron.sh  install_neuron.sh  install_neuron_reportinglib.sh  neuron_direct.py  nrnivmodl-core.sh  nrnivmodl.sh  ringtest.sh  run_corenrn.sh  run_corenrn_restore.sh  run_neuron.sh  run_neuron_direct.sh  spack_setup.sh
tests/regression/: CMakeLists.txt
tests/unit/alignment/: CMakeLists.txt  alignment.cpp
tests/unit/cmdline_interface/: CMakeLists.txt  test_cmdline_interface.cpp
tests/unit/interleave_info/: CMakeLists.txt  check_constructors.cpp
tests/unit/lfp/: CMakeLists.txt  lfp.cpp
(+1043 files in other folders)
